--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -16,3 +16,28 @@ i{
 .card-img-top{
     height: 120px;
 }
+
+p{
+    font-family: "Open Sans", sans-serif;
+    font-weight: 300;
+    font-size: 14px;
+}
+
+h5{
+    font-family: "Open Sans", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+}
+
+h3{
+    font-family: "Open Sans", sans-serif;
+    font-weight: 500;
+    font-size: 20px;
+    text-align: center;
+}
+
+.nav-link{
+    font-family: "Open Sans", sans-serif;
+    font-weight: 300;
+    font-size: 14px;
+}
